metadata-classic/objects/LiveText__Structured_Form__c.object
<CustomObject>
    <fields>
        <fullName>LiveText__Channel__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Channel</label>
        <referenceTo>LiveText__LiveText_Number__c</referenceTo>
        <relationshipLabel>Structured Forms</relationshipLabel>
        <relationshipName>Structured_Forms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LiveText__Description__c</fullName>
        <inlineHelpText>Enter a description that helps agents understand the form.</inlineHelpText>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LiveText__Form_JSON__c</fullName>
        <inlineHelpText>Paste the JSON code from your Apple Business Chat sandbox.</inlineHelpText>
        <label>JSON</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>LiveText__Is_Static__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is Static</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LiveText__Type__c</fullName>
        <label>Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Structured Form</label>
    <nameField>
        <label>Structured Form Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Structured Forms</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>